--- a/portfolio/CSA/app/scss/_fonts.scss
+++ b/portfolio/CSA/app/scss/_fonts.scss
@@ -6,3 +6,5 @@
 @include font-face("HelveticaNeueCyrLight", "../fonts/HelveticaNeueCyr/HelveticaNeueCyr-Light");
 @include font-face("HelveticaNeueCyrMedium", "../fonts/HelveticaNeueCyr/HelveticaNeueCyr-Medium");
 @include font-face("MyriadProRegular", "../fonts/MyriadPro/MyriadProRegular/MyriadProRegular");
+@include font-face("SansBold", "../fonts/PTSans/PTSansBold/PTSansBold");
+@include font-face("SansRegular", "../fonts/PTSans/PTSansRegular/PTSansRegular");
