--- a/portfolio/CSA/app/css/common.css
+++ b/portfolio/CSA/app/css/common.css
@@ -307,6 +307,77 @@ body {
 .header_top_last {
   top: -100% !important; }
 
+#footer {
+  background-color: #272727;
+  position: absolute;
+  width: 100%;
+  z-index: 1000;
+  bottom: -100px;
+  -webkit-transition: .3s ease;
+  -o-transition: .3s ease;
+  transition: .3s ease; }
+  #footer .content {
+    height: 88px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  #footer .left_block {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    padding-top: 2px; }
+  #footer .logo a {
+    display: block;
+    width: 61px;
+    height: 61px;
+    background: url(../img/logo_header_second.svg);
+    -webkit-background-size: cover;
+            background-size: cover; }
+  #footer .txt {
+    font: 1.2em "HelveticaNeueCyrBold";
+    color: #f4ea48;
+    text-transform: uppercase;
+    line-height: 112%;
+    margin-top: -1px;
+    padding-left: 14px; }
+  #footer .right_block {
+    padding-top: 2px; }
+    #footer .right_block .txt {
+      text-transform: none;
+      text-align: right;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: end;
+      -webkit-align-items: flex-end;
+          -ms-flex-align: end;
+              align-items: flex-end; }
+  #footer .line_bottom {
+    height: 12px;
+    display: block;
+    background-color: #000; }
+
+.active_footer {
+  -webkit-transform: translateY(-100px);
+      -ms-transform: translateY(-100px);
+          transform: translateY(-100px); }
+
 #header_nav {
   position: absolute;
   width: 100%;
