--- a/Shop/allfilters-page/app/css/filter.css
+++ b/Shop/allfilters-page/app/css/filter.css
@@ -54,6 +54,16 @@
         -ms-transform: translateY(-50%);
             transform: translateY(-50%); }
 
+.a_eddited {
+  -webkit-transform: translate(-100%, -25%);
+      -ms-transform: translate(-100%, -25%);
+          transform: translate(-100%, -25%); }
+  .a_eddited::after {
+    left: auto;
+    right: -4px;
+    border-right: none;
+    border-left: 4px solid rgba(0, 0, 0, 0.8); }
+
 .filter {
   border: 1px solid #e5e5e5;
   width: 100%;
@@ -90,10 +100,7 @@
         -webkit-transform: translateY(-50%);
             -ms-transform: translateY(-50%);
                 transform: translateY(-50%);
-        -webkit-transition: .3s;
-        -o-transition: .3s;
-        transition: .3s;
-        opacity: 0; }
+        display: none; }
         .filter .section .tab_title .select_indicator span {
           display: block;
           border: 9px solid transparent;
@@ -190,8 +197,6 @@
       -webkit-transform: rotate(-90deg);
           -ms-transform: rotate(-90deg);
               transform: rotate(-90deg); }
-    .filter .section .title_active .select_indicator {
-      opacity: 1; }
     .filter .section .tab_content {
       display: none;
       height: auto;
