--- a/Shop/catalogue-page/app/scss/filter.scss
+++ b/Shop/catalogue-page/app/scss/filter.scss
@@ -82,8 +82,7 @@
                 left: 0;
                 top: 50%;
                 transform: translateY(-50%);
-                transition: .3s;
-                opacity: 0;
+                display: none;
                 span {
                     display: block;
                     border: 9px solid transparent;
@@ -192,9 +191,6 @@
         .title_active {
             .arrow {
                 transform: rotate(-90deg);
-            }
-            .select_indicator {
-                opacity: 1;
             }
         }
         .tab_content {
