--- a/Shop/brand-collections-page/app/scss/brand_collections.scss
+++ b/Shop/brand-collections-page/app/scss/brand_collections.scss
@@ -156,6 +156,31 @@
     }
 }
 
+.brand_categories_block {
+    margin-top: 40px;
+    .categories_nav {
+        position: relative;
+        height: 40px;
+    }
+    ul.categories_list {
+        display: flex;
+        //position: absolute;
+        left: 0;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        background-color: red;
+        a {
+            white-space: nowrap;
+        }
+        li {
+            padding: 0 50px;
+            background-color: white;
+            opacity: 0.7;
+
+        }
+    }
+}
 
 
 
