--- a/Shop/brand-collections-page/app/scss/brand_collections.scss
+++ b/Shop/brand-collections-page/app/scss/brand_collections.scss
@@ -1,10 +1,10 @@
 .title {
     position: relative;
-    img{
+    img {
         position: absolute;
         height: 100%;
         right: 0;
-   }
+    }
 }
 
 .brand_heading {
@@ -157,36 +157,172 @@
 }
 
 .brand_categories_block {
-    margin-top: 40px;
+    margin-top: 50px;
+    .slider-item {
+        &:before {
+            content: "";
+            display: block;
+            padding-top: 100%;
+        }
+    }
+    .slider-item a {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        img {
+            padding: 20px;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 100%;
+            height: 100%;
+        }
+    }
+    .item-link {
+        position: relative !important;
+    }
+    .item-price {
+        background: rgba(255, 255, 255, 0.85);
+        right: 1px;
+        bottom: 1px;
+    }
     .categories_nav {
-        position: relative;
         height: 40px;
+        margin-bottom: 10px;
+        background-color: #fff;
+        position: relative;
+        transition: top .3s;
+    }
+    .fixed {
+        position: fixed;
+        top: 0px;
+        width: 100%;
+        padding: 0 15px;
+        left: 0;
+        background-color: rgba(255, 255, 255, 0.9);
+        z-index: 2;
+        box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.1);
+        .slick-prev, .slick-next {
+            height: 40px !important;
+            padding: 0 15px !important;
+        }
+        li {
+            border-radius: 0 !important;
+            margin-bottom: 0 !important;
+        }
+        li:before {
+            display: none;
+        }
+        a {
+            height: 40px !important;
+            display: flex !important;
+            align-items: center;
+        }
     }
     ul.categories_list {
         display: flex;
-        //position: absolute;
-        left: 0;
+        justify-content: center;
         list-style: none;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        width: auto;
         margin: 0;
         padding: 0;
-        background-color: red;
-        a {
-            white-space: nowrap;
+        .slick-prev, .slick-next {
+           content: '/';
+           height: 24px;
+           padding: 0 15px;
+           width: 13px;
+           border: none;
+           font-size: 0;
+           transition: opacity .3s, height .3s;
+           position: relative;
+           cursor: pointer;
+           &:after {
+            content: '';
+            position: absolute;
+            height: 21px;
+            width: 11px;
+            background: url(../images/arrow_brands.png) no-repeat center center;
+            background-size: contain;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            opacity: 0.5;
+           }
         }
-        li {
-            padding: 0 50px;
-            background-color: white;
-            opacity: 0.7;
+        .slick-prev {
+            transform: rotate(180deg);
+        }
+        a { 
+            display: flex;
+            align-items: center;
+            position: relative;
+            white-space: nowrap;
+            padding: 3px 8px;
+            height: 24px;
+            transition: .3s;
+            span {
+                border-bottom: 1px dotted #585858;
+            }
 
         }
+        li {
+            border-radius: 4px;
+            margin: 0 3px 4px 3px;
+            position: relative;
+            transition: .3s;
+            &:before {
+                content: "";
+                position: absolute;
+                bottom: -5px;
+                left: 50%;
+                width: 0;
+                height: 0;
+                border-color: transparent;
+                border-style: solid;
+                margin-left: -5px;
+                border-width: 5px 5px 0;
+            }
+        }
+        .active_nav_link {
+             background-color: #000;
+             a {
+                color: #fff;
+                span {
+                border-bottom: none;
+            }
+             }
+             &:before {
+                border-top-color: #000;
+             }
+        }
     }
+    .init {
+        position: relative !important;
+    }
+    .content_categories {
+    }
+}
+.brand_categories_fixed {
+    margin-top: 95px;
 }
 
 
 
 @media screen and (min-width: 1025px) {
-    .brand_heading .description_block a:hover {
-            color: #197ac4;
+    .brand_heading .description_block a:hover,
+    .brand_categories_block ul.categories_list a:hover {
+        color: #197ac4;
+    }
+    .active_nav_link a:hover {
+        color: #fff !important;
+    }
+    .brand_categories_block ul.categories_list .slick-prev:hover,
+    .brand_categories_block ul.categories_list .slick-next:hover {
+        opacity: 1;
     }
 }
 
@@ -206,21 +342,19 @@
     }
 }
 
-@media screen and (max-width: 650px) {
-    
-}
+@media screen and (max-width: 650px) {}
 
 @media screen and (max-width: 578px) {
     .brand_heading .description_block {
-    	 padding: 20px;
+        padding: 20px;
     }
     .brand_heading .brand_heading-content {
         display: block;
     }
     .brand_heading .logo_block {
-    	 border-right: none;
-    	 border-bottom: 1px solid #e5e5e5;
-    	 padding: 40px;
+        border-right: none;
+        border-bottom: 1px solid #e5e5e5;
+        padding: 40px;
     }
     .brand_heading .logo_block,
     .brand_heading .description_block {
